--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             body{
                   background-color: aqua;
             }
+            h1{
+                  text-align: center;
+            }
       </style>
 </head>
 <body>
