--- a/index.html
+++ b/index.html
@@ -1,24 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>First Class</title>
-      <style>
-            body{
-                  background-color: aqua;
-            }
-            h1{
-                  text-align: center;
-            }
-      </style>
-</head>
-<body>
-      <h1>
-            This is My first Website with GitHub Actions.
 
-      </h1>
-      <h1> This Website Name is  https://marked-magic.surge.sh</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University Website</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <!-- section_1 -->
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src="images/logo.png" alt=""></a>
+            <div class="nav-links" id="navLinks">
+                <i class="fa fa-close" onclick="hideMenu()"></i>
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">COURSE</a></li>
+                    <li><a href="">BLOG</a></li>
+                    <li><a href="">CONTECT</a></li>
+                </ul>
+            </div>
+            <i class="fa fa-navicon" onclick="showMenu()"></i>
+        </nav>
+        <div class="text-box">
+            <h1>World's Biggest University</h1>
+            <p>Making Website is now is the on of essiest thing in the World.You just need to learn HTML CSS<br> and
+                JavaScript and you are good to go.</p>
+            <a href="" class="hero-btn">Visit us to know More</a>
+        </div>
+    </section>
+    <!-- COURSE -->
+    <section class="course">
+        <h1>Course We Offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="row">
+            <div class="course-col">
+                <h3>Intermediat</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vel numquam deserunt voluptates
+                    incidunt hic vero et quidem nisi, ratione minima cum odit autem modi! Perspiciatis in possimus earum
+                    quo.</p>
+            </div>
+            <div class="course-col">
+                <h3>Degree</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vel numquam deserunt voluptates
+                    incidunt hic vero et quidem nisi, ratione minima cum odit autem modi! Perspiciatis in possimus earum
+                    quo.</p>
+            </div>
+            <div class="course-col">
+                <h3>Post Graduation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, vel numquam deserunt voluptates
+                    incidunt hic vero et quidem nisi, ratione minima cum odit autem modi! Perspiciatis in possimus earum
+                    quo.</p>
+            </div>
+
+        </div>
+    </section>
+    <!-- ----- campus ----- -->
+
+    <section class="campus">
+        <h1>Our Globel Campus</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="row">
+            <div class="campus-col">
+                <img src="images/london.png">
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/newyork.png">
+                <div class="layer">
+                    <h3>NEW YORK</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/washington.png">
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ----- Facilities ----- -->
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="row">
+            <div class="facilities-col">
+                <img src="images/library.png">
+                <h3>World Class Library</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque alias vitae autem. Vitae facilis quia
+                    exercitationem. </p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/basketball.png">
+                <h3>Largest Play Ground</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque alias vitae autem. Vitae facilis quia
+                    exercitationem. </p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/cafeteria.png">
+                <h3>Tasty and Healthy Food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque alias vitae autem. Vitae facilis quia
+                    exercitationem. </p>
+            </div>
+        </div>
+    </section>
+    <!-- ----- testimonials ----- -->
+
+    <section class="testimonials">
+        <h1>What our Student Says</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="row">
+            <div class="testimonials-col">
+                <img src="images/user1.jpg">
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut voluptatum cumque inventore
+                        cupiditate repellat voluptas enim mollitia qui. Est nemo debitis veritatis numquam tenetur.</p>
+                    <h3>Christine Barkley</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+            </div>
+            <div class="testimonials-col">
+                <img src="images/user2.jpg">
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut voluptatum cumque inventore
+                        cupiditate repellat voluptas enim mollitia qui. Est nemo debitis veritatis numquam tenetur.</p>
+                    <h3>David Byer</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- ------ Call To Action ------ -->
+
+    <section class="cta">
+        <h1>Enroll For Our Various Online Cources<br> Anywhere From The World</h1>
+        <a href="" class="hero-btn">Contact Us</a>
+    </section>
+    <!-- ------ Footer ------ -->
+
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste amet doloribus aut sunt aliquid animi
+            itaque<br> officia impedit, sapiente accusamus natus placeat fuga ab ad tenetur.</p>
+        <din class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+        </din>
+        <p>Made With <i class="fa fa-heart-o"></i> by Easy Tutorials</p>
+    </section>
+
+
+
+    <!-- ---Java Script for toggle menu--- -->
+    <script>
+        var navLinks = document.getElementById("navLinks");
+        function showMenu() {
+            navLinks.style.right = "0";
+        }
+        function hideMenu() {
+            navLinks.style.right = "-200px";
+        }
+    </script>
 </body>
+
 </html>
